# Leonardo

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac
custom_test/: custom1.txt  custom2.txt  custom3.txt
exempel/: leonardo-02.l++  leonardo-02.ps  sol.ps  spiral.l++  spiral.ps
src/: Makefile.am  ast.hpp  build.txt  context.hpp  driver.cc  driver.cpp  driver.h  driver.hpp  expression.hpp  exprtest.cc  location.hh  main.cpp  parser.cc  parser.h  parser.hpp  parser.yy  position.hh  scanner.cc  scanner.hpp  scanner.ll  stack.hh  test.txt  writer.hpp  y.tab.h
src/expression/: context.hpp  expression.hpp
src/expression/arithmetic/: arithnode.hpp  nmultiply.hpp
src/expressions/: expression.hpp
src/expressions/arithmetic/: arithnode.hpp  nadd.hpp  nconstant.hpp  ndivide.hpp  nmultiply.hpp  nnegate.hpp  nsubtract.hpp  nvariable.hpp
src/expressions/statement/: stassignment.hpp  statement.hpp  stcolor.hpp  stforw.hpp  stleft.hpp  stpen.hpp  strep.hpp
src/test/: input1.txt  input10.txt  input2.txt  input4.txt  input5.txt  pointystar.txt
src/turtle/: turtle.cpp  turtle.hpp
src/writers/: default.cpp  default.hpp  svg.cpp  svg.hpp
